@@ -3,6 +3,7 @@ package com.github.wellch4n.oops.infrastructure.kubernetes.stream;
 import com.github.wellch4n.oops.application.port.PodLogStreamGateway;
 import com.github.wellch4n.oops.application.port.StreamSink;
 import com.github.wellch4n.oops.domain.environment.Environment;
+import com.github.wellch4n.oops.infrastructure.kubernetes.KubernetesClients;
 import io.fabric8.kubernetes.api.model.Pod;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.dsl.LogWatch;
@@ -17,12 +18,12 @@ import org.springframework.stereotype.Component;
 
 @Component
 public class KubernetesPodLogStreamGateway implements PodLogStreamGateway {
-    private final ExecutorService executorService = Executors.newCachedThreadPool();
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     @Override
     public AutoCloseable stream(Environment environment, String namespace, String podName, StreamSink sink) {
         KubernetesStreamHandle handle = new KubernetesStreamHandle();
-        KubernetesClient client = com.github.wellch4n.oops.infrastructure.kubernetes.KubernetesClients.from(environment.getKubernetesApiServer());
+        KubernetesClient client = KubernetesClients.from(environment.getKubernetesApiServer());
         handle.add(client);
 
         PodResource podResource = client.pods().inNamespace(namespace).withName(podName);
